# sysrepo-augeas

./: CMakeLists.txt  LICENSE  README.md  augeas-extension.yang  augyang.c  augyang.h  augyang_main.c  tutorial.md
CMakeModules/: FindAugeas.cmake  FindLibXML2.cmake  FindSELinux.cmake
checkpoint/: .passwd.yang.swp  backuppchosts.yang  iproute2.yang  passwd.yang  simplevars.yang
lens_fix/: systemd.aug
lens_patch/: aptconf.aug.patch  inputrc.aug.patch  inputrc.patch  lightdm.aug.patch  mke2fs.aug.patch  netplan.aug  resolv.aug.patch  rsyslog.aug.patch  shellvars.aug.patch  star.aug.patch  systemd.aug.patch  update_lens.sh  xml.aug.patch
modules/: augeas-extension.h  augeas-extension.yang
plugins/: CMakeLists.txt  ay_startup.c  srds_augeas.c  srds_augeas.h  srdsa_common.c  srdsa_common.h  srdsa_init.c  srdsa_load.c  srdsa_store.c
scripts/: install_modules.sh
src/: .gdbinit  augyang.c  augyang.h  ayg_config.h.in  common.c  common.h  debug.c  debug.h  main.c  parse_regex.c  parse_regex.h  print_yang.c  print_yang.h  terms.c  terms.h
srds_augeas/: plg_config.h.in  srds_augeas.c  srds_augeas.h  srdsa_common.c  srdsa_init.c  srdsa_load.c  srdsa_store.c
srplgd_augeas/: CMakeLists.txt  srplgd_augeas.c  srplgda_common.c  srplgda_common.h  srplgda_config.h.in
tests/: CMakeLists.txt  tcommon.c  tconfig.h.in  test.sh  test_anaconda.c  test_aptconf.c  test_automounter.c  test_backuppchosts.c  test_ceph.c  test_cmdline.c  test_cpanel.c  test_cron.c  test_darkice.c  test_devfsrules.c  test_device_map.c  test_dhclient.c  test_dnsmasq.c  test_dovecot.c  test_ethers.c  test_grubenv.c  test_gtkbookmarks.c  test_hostname.c  test_hosts.c  test_hosts_access.c  test_inittab.c  test_inputrc.c  test_iproute2.c  test_iptables.c  test_iscsid.c  test_ldif.c  test_login_defs.c  test_logrotate.c  test_monit.c  test_netplan.c  test_ntp.c  test_ntpd.c  test_pam.c  test_passwd.c  test_pg_hba.c  test_postfix_access.c  (+20 more)
tests/CMakeModules/: AYtest.cmake
tests/checkpoint/: cmdline.yang  devfsrules.yang  ethers.yang  grubenv.yang  hostname.yang  hosts.yang  iscsid.yang  login_defs.yang  passwd.yang  postfix_sasl_smtpd.yang  qpid.yang  securetty.yang  vmware_config.yang
tests/config_files/: anaconda  aptconf  automounter  backuppchosts  ceph  cmdline  cpanel  cron  darkice  devfsrules  device-map  dhclient  dnsmasq  dovecot  ethers  grubenv  gtkbookmarks  hostname  hosts  hosts-access  inittab  inputrc  iproute2  iptables  iscsid  ldif  ldif2  login-defs  logrotate  monit  netplan  ntp  ntpd  pam  passwd  pg-hba  postfix-access  postfix-sasl-smtpd  qpid  resolv  (+18 more)
tests/yang_expected/: access.yang  activemq-conf.yang  activemq-xml.yang  afs-cellalias.yang  aliases.yang  anaconda.yang  anacron.yang  approx.yang  apt-update-manager.yang  aptcacherngsecurity.yang  aptconf.yang  aptpreferences.yang  aptsources.yang  authinfo2.yang  authorized-keys.yang  authselectpam.yang  automaster.yang  automounter.yang  avahi.yang  backuppchosts.yang  bbhosts.yang  bootconf.yang  cachefilesd.yang  carbon.yang  ceph.yang  cgconfig.yang  cgrules.yang  channels.yang  chrony.yang  clamav.yang  cmdline.yang  cobblermodules.yang  collectd.yang  cpanel.yang  cron-user.yang  cron.yang  crypttab.yang  csv.yang  cups.yang  cyrus-imapd.yang  (+185 more)
